--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+        <title>Our Access - Find a route</title>
+        <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -24,10 +26,10 @@
             <a class="nav-link active" aria-current="page" href="#">Accessibility Map</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Service Request</a>
+            <a class="nav-link" href="service-request.html">Service Request</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Disability Resources</a>
+            <a class="nav-link" href="disability-resources.html">Disability Resources</a>
           </li>
         </ul>
       </div>
@@ -135,4 +137,5 @@
     </div>
     <script src="scripts/map-script.js"></script>
   </body>
+  <footer>&copy Our Access 2023</footer>
   </html>
