remove horizontal scroll bug

--- a/service-request.html
+++ b/service-request.html
@@ -37,6 +37,9 @@
   </nav>
 
   <body>
+    <form action="" onclick="print('service request submitted!')">
+        
+    </form>
     
   </body>
   <footer>&copy Our Access 2023</footer>
