make resources cards responsive

--- a/disability-resources.html
+++ b/disability-resources.html
@@ -38,6 +38,7 @@
   </nav>
 
   <body>
+    <h1 id="resources-heading">Campus Resources</h1>
     <div id="banner-slides" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#banner-slides" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Register with Disability Resources"></button>
@@ -65,35 +66,35 @@
             <h2>Accessibility at Rochester</h2>
             <button class="btn btn-secondary"><a href="https://www.rochester.edu/accessibility.html" target="_blank" rel="noopener noreferrer">Learn More</a></button>
           </div>
-      </div>
-      <div id="banner-slides-controls">
-        <button class="carousel-control-prev" type="button" data-bs-target="#banner-slides" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#banner-slides" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+        </div>
+        <div id="banner-slides-controls">
+          <button class="carousel-control-prev" type="button" data-bs-target="#banner-slides" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#banner-slides" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
     </div>
 
     <div id="resources-cards">
-      <div class="card" style="width: 22vw;">
+      <div class="card">
         <img src="assets/facilities.png" class="card-img-top" alt="A closeup of someone viewing a campus building's floor plans on a tablet.">
         <div class="card-body">
           <a href="https://www.facilities.rochester.edu/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">Facilities</a>
           <h5 class="card-title">Providing routine service and maintenance.</h5>
         </div>
       </div>
-      <div class="card" style="width: 22vw;">
+      <div class="card">
         <img src="assets/DisabilityOffice.png" class="card-img-top" alt="Two people facing each other seated at an office desk.  The person closer to the camera is in a wheelchair.">
         <div class="card-body">
           <a href="https://www.rochester.edu/college/disability/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">Disabilities Office</a>
           <h5 class="card-title">Promoting equal access and inclusive experiences.</h5>
         </div>
       </div>
-      <div class="card" style="width: 22vw;">
+      <div class="card">
         <img src="assets/club.png" class="card-img-top" alt="Logo for University of Rochester Disability Awareness Group">
         <div class="card-body">
           <a href="https://ccc.rochester.edu/urda/home/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">Disability Awareness Group</a>
