--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="assets/bx-transfer.svg" alt="icon to switch starting location with destination" role="button" onclick="switchInput()">
                 </div>
                 <div id="route-info">
-                    <h2>Destination</h2>
+                    <div id="info-header"><img src="assets/expand-vertical-regular-24.png" alt="vertical expand icon" onclick="expandInfo()"><h2>Destination</h2></div>
                     <div id="access-features">
                         <h3>Allow the following:</h3>
                         <form id="access-checkboxes">
@@ -108,8 +108,8 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-primary" id="find-route" onclick="find_route(event)" hidden>Go</button> 
-                <button class="btn btn-secondary" id="finish-route">Finish</button>
+                <button class="btn btn-primary" id="find-route" onclick="find_route(event)">Go</button> 
+                <button class="btn btn-secondary" id="finish-route" hidden>Finish</button>
                 </div>
         </aside>
         <main id="map"></main>
