display route length and accessibility

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                         </form>
                     </div>
                     <div id="directions-container" hidden>
-                        <p id="access-summary">Allow the following:</p>
+                        <p id="route-length"></p>
+                        <p id="access-summary">Allow: </p>
                         <div id="display-directions">
                             <ul id="directions"></ul>
                         </div>
