alert if no route found

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     
     <!-- Confirmation pop up -->
     <div class="modal fade" id="end-route-confirmation" tabindex="-1" aria-labelledby="end directions confirmation pop-up" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="end-route-label">End Journey</h5>
