fix map responsiveness

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <button class="btn btn-secondary" id="finish-route" hidden>Finish</button>
                 </div>
         </aside>
-        <main id="map"></main>
+        <main id="map" class="overlay-map"></main>
     </div>
     <div id="input-overlay">
         <div class="input-group mb-3">
