expand directions more for mobile

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="assets/bx-transfer.svg" alt="icon to switch starting location with destination" role="button" onclick="switchInput()">
                 </div>
                 <div id="route-info">
-                    <div id="info-header"><img src="assets/expand-vertical-regular-24.png" alt="vertical expand icon" onclick="expandInfo()"><h2>Destination</h2></div>
+                    <div id="info-header"><img src="assets/expand-vertical-regular-24.png" alt="vertical expand icon" onclick="expandInfo()" id="expand-icon"><h2>Destination</h2></div>
                     <div id="access-features">
                         <h3>Allow the following:</h3>
                         <form id="access-checkboxes">
