Revert "prevent map div moving on mobile"
This reverts commit 251838672c281af66b0ecfd824257969fce5af8a.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="map-page">
+<html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
         <title>Our Access - Find a route</title>
